--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,7 @@ EXA_API_KEY=your_exa_api_key_here
 # Optional: Provider-specific API keys
 LONGCAT_API_KEY=your_longcat_api_key_here
 ZENMUX_API_KEY=your_zenmux_api_key_here
+GEMINI_API_KEY=your_gemini_api_key_here
 
 # Database
 DATABASE_PATH=./data/applications.db
