--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "streamlit>=1.32.0",
     "openai>=1.12.0", # For OpenRouter API compatibility
+    "google-genai>=1.0.0", # For Google Gemini API
     "python-dotenv>=1.0.0",
     "plotly>=5.19.0",
     "pandas>=2.2.0",
