--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ fastapi>=0.104.0
 uvicorn>=0.24.0
 python-multipart>=0.0.6
 openai>=1.12.0
+google-genai>=1.0.0
 python-dotenv>=1.0.0
 python-docx>=1.1.0
 pillow>=10.2.0
