feat: add comprehensive project documentation and design system
- Created AGENTS.md with detailed technical documentation for AI agents including architecture, build commands, and code guidelines
- Added extensive design system documentation based on shadcn/ui with color system, accessibility, and component guidelines
- Updated README.md with expanded architecture details and new design system section
- Added initial Supabase auth and metering specification for future implementation
- Removed deprecate

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,31 @@
-# Backend API URL
+# API Configuration
 VITE_API_URL=http://localhost:8000
+
+# Brand Customization (White-labeling)
+# Uncomment and customize these values to white-label the application
+
+# Brand Identity
+# VITE_BRAND_NAME=AI Resume Optimizer
+# VITE_BRAND_LOGO=/logo.svg
+# VITE_BRAND_FAVICON=/favicon.ico
+
+# Brand Colors (Hex format)
+# VITE_PRIMARY_COLOR=#0274BD
+# VITE_PRIMARY_COLOR_LIGHT=#3A9AD9
+# VITE_PRIMARY_COLOR_DARK=#015A96
+# VITE_ACCENT_COLOR=#F57251
+# VITE_ACCENT_COLOR_LIGHT=#FF8A6B
+# VITE_ACCENT_COLOR_DARK=#DC5A3C
+
+# Typography
+# VITE_FONT_FAMILY=-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif
+# VITE_FONT_FAMILY_DISPLAY=system-ui, -apple-system, sans-serif
+# VITE_FONT_FAMILY_MONO='SF Mono', 'Consolas', 'Monaco', monospace
+
+# Theme Customization
+# VITE_RADIUS_SCALE=1.0  # Border radius scale (0-1, where 1 = full rounded)
+
+# SEO and Metadata
+# VITE_META_TITLE=AI Resume Optimizer - Optimize Your Resume for Any Job
+# VITE_META_DESCRIPTION=Use AI to optimize your resume for specific job postings. Get better matches and land more interviews.
+# VITE_META_KEYWORDS=resume,optimizer,AI,job,career,ATS
