--- a/.gitignore
+++ b/.gitignore
@@ -54,4 +54,4 @@ backend/fix_app_67.py
 backend/fix_app65_direct.py
 backend/fix_app65_polish.py
 backend/fix_docx_table_formatting.py
-.gitignore
+docs/specs/authentication_and_metering_spec.md
