feat: add per-agent model configuration and improve form validation
- Added environment variables for configuring different models per agent (analyzer, optimizer, etc.)
- Updated server to use agent-specific models instead of default model throughout pipeline
- Enhanced URL validation to accept URLs without scheme (http/https) in job input field
- Improved GitHub token validation to support both classic and fine-grained tokens
- Added text alignment options for form field error and helper messages

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ backend/fix_app65_direct.py
 backend/fix_app65_polish.py
 backend/fix_docx_table_formatting.py
 docs/specs/authentication_and_metering_spec.md
+backend/exports/HumanResocia_AIEngineer_Dejitare/MuhammadHidayat_Resume_AIEngineer.docx
