--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,3 +17,12 @@ HOST=0.0.0.0
 
 # CORS Origins (comma-separated)
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+
+# Per-agent model environment variables
+DEFAULT_MODEL=qwen/qwen3-max
+ANALYZER_MODEL=
+OPTIMIZER_MODEL=
+IMPLEMENTER_MODEL=
+VALIDATOR_MODEL=
+PROFILE_MODEL=
+POLISH_MODEL=zenmux::anthropic/claude-sonnet-4.5
