--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@ docs/specs/llm-provider-parameters/complete-implementation.md
 docs/specs/llm-provider-parameters/implementation-summary.md
 docs/specs/llm-provider-parameters/phase3-model-centric-pricing.md
 docs/specs/llm-provider-parameters/README.md
+docs/specs/authentication-and-metering/authentication_and_metering_spec.md
