feat: add configurable temperature settings for all agents
- Added per-agent temperature environment variables with sensible defaults (0.1-0.8 range based on agent role)
- Updated all agent calls to use their respective temperature settings
- Adjusted polish agent target line counts for better resume length control

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -26,3 +26,11 @@ IMPLEMENTER_MODEL=
 VALIDATOR_MODEL=
 PROFILE_MODEL=
 POLISH_MODEL=zenmux::anthropic/claude-sonnet-4.5
+
+# Per-agent temperature settings (0.0-2.0 depending on provider)
+ANALYZER_TEMPERATURE=0.3
+OPTIMIZER_TEMPERATURE=0.7
+IMPLEMENTER_TEMPERATURE=0.1
+VALIDATOR_TEMPERATURE=0.2
+PROFILE_TEMPERATURE=0.1
+POLISH_TEMPERATURE=0.8
