--- a/backend/.gcloudignore
+++ b/backend/.gcloudignore
@@ -15,8 +15,11 @@ venv/
 
 # Local env and secrets
 .env
-.env.*
-!*.example
+.env.local
+.env.development
+.env.production
+!.env.example
+!.env.cloudrun
 
 # Logs and temp
 *.log
