fix: remove PORT from env vars - Cloud Run sets it automatically

--- a/backend/.env.cloudrun
+++ b/backend/.env.cloudrun
@@ -23,7 +23,7 @@
 DATABASE_PATH=/tmp/applications.db
 
 # Server Configuration
-PORT=8080
+# PORT is automatically set by Cloud Run (always 8080) - DO NOT SET MANUALLY
 HOST=0.0.0.0
 
 # CORS Origins (use * for development, specific domains for production)
