chore: update model configuration to production setup
- Use Gemini 2.5 Pro for analysis and validation (fast + cheap)
- Use Kimi-K2-Thinking for optimization (reasoning model)
- Use Claude Sonnet 4.5 for implementation, profile, and polish (high quality)
- Adjust temperatures: higher for creative tasks, lower for structured tasks

--- a/backend/.env.cloudrun
+++ b/backend/.env.cloudrun
@@ -30,21 +30,21 @@ HOST=0.0.0.0
 CORS_ORIGINS=*
 
 # Model Configuration
-DEFAULT_MODEL=qwen/qwen3-max
-ANALYZER_MODEL=qwen/qwen3-max
-OPTIMIZER_MODEL=qwen/qwen3-max
-IMPLEMENTER_MODEL=qwen/qwen3-max
-VALIDATOR_MODEL=qwen/qwen3-max
-PROFILE_MODEL=qwen/qwen3-max
-POLISH_MODEL=zenmux::anthropic/claude-sonnet-4.5
+DEFAULT_MODEL=gemini::gemini-2.5-pro
+ANALYZER_MODEL=gemini::gemini-2.5-pro
+OPTIMIZER_MODEL=openrouter::moonshotai/kimi-k2-thinking
+IMPLEMENTER_MODEL=openrouter::anthropic/claude-sonnet-4.5
+VALIDATOR_MODEL=openrouter::gemini::gemini-2.5-pro
+PROFILE_MODEL=openrouter::anthropic/claude-sonnet-4.5
+POLISH_MODEL=openrouter::anthropic/claude-sonnet-4.5
 
 # Temperature Settings (0.0-2.0)
-ANALYZER_TEMPERATURE=0.3
-OPTIMIZER_TEMPERATURE=0.7
-IMPLEMENTER_TEMPERATURE=0.1
+ANALYZER_TEMPERATURE=0.6
+OPTIMIZER_TEMPERATURE=1
+IMPLEMENTER_TEMPERATURE=0.6
 VALIDATOR_TEMPERATURE=0.2
-PROFILE_TEMPERATURE=0.1
-POLISH_TEMPERATURE=0.8
+PROFILE_TEMPERATURE=0.6
+POLISH_TEMPERATURE=0.7
 
 # ============================================================
 # NOTES
