--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,18 +19,18 @@ HOST=0.0.0.0
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 
 # Per-agent model environment variables
-DEFAULT_MODEL=qwen/qwen3-max
-ANALYZER_MODEL=
-OPTIMIZER_MODEL=
-IMPLEMENTER_MODEL=
-VALIDATOR_MODEL=
-PROFILE_MODEL=
-POLISH_MODEL=zenmux::anthropic/claude-sonnet-4.5
+DEFAULT_MODEL=gemini::gemini-2.5-pro
+ANALYZER_MODEL=gemini::gemini-2.5-pro
+OPTIMIZER_MODEL=openrouter::moonshotai/kimi-k2-thinking
+IMPLEMENTER_MODEL=openrouter::anthropic/claude-sonnet-4.5
+VALIDATOR_MODEL=openrouter::gemini::gemini-2.5-pro
+PROFILE_MODEL=openrouter::anthropic/claude-sonnet-4.5
+POLISH_MODEL=openrouter::anthropic/claude-sonnet-4.5
 
 # Per-agent temperature settings (0.0-2.0 depending on provider)
-ANALYZER_TEMPERATURE=0.3
-OPTIMIZER_TEMPERATURE=0.7
-IMPLEMENTER_TEMPERATURE=0.1
+ANALYZER_TEMPERATURE=0.6
+OPTIMIZER_TEMPERATURE=1
+IMPLEMENTER_TEMPERATURE=0.6
 VALIDATOR_TEMPERATURE=0.2
-PROFILE_TEMPERATURE=0.1
-POLISH_TEMPERATURE=0.8
+PROFILE_TEMPERATURE=0.6
+POLISH_TEMPERATURE=0.7
