--- a/backend/.env.cloudrun
+++ b/backend/.env.cloudrun
@@ -34,7 +34,7 @@ DEFAULT_MODEL=gemini::gemini-2.5-pro
 ANALYZER_MODEL=gemini::gemini-2.5-pro
 OPTIMIZER_MODEL=openrouter::moonshotai/kimi-k2-thinking
 IMPLEMENTER_MODEL=openrouter::anthropic/claude-sonnet-4.5
-VALIDATOR_MODEL=openrouter::gemini::gemini-2.5-pro
+VALIDATOR_MODEL=gemini::gemini-2.5-pro
 PROFILE_MODEL=openrouter::anthropic/claude-sonnet-4.5
 POLISH_MODEL=openrouter::anthropic/claude-sonnet-4.5
 
