feat: update model configurations and improve deployment messaging
- Changed OPTIMIZER_MODEL from kimi-k2-thinking to polaris-alpha
- Updated BaseInsightExtractor default model from cerebras to gemini-2.5-flash
- Removed public access attempt from deploy script with clearer messaging about org policy restrictions
- Fixed TypeScript interval type definitions to properly handle undefined values

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,5 @@ docs/specs/llm-provider-parameters/implementation-summary.md
 docs/specs/llm-provider-parameters/phase3-model-centric-pricing.md
 docs/specs/llm-provider-parameters/README.md
 docs/specs/authentication-and-metering/authentication_and_metering_spec.md
+backend/.env.cloudrun
+backend/.env.cloudrun
