--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,10 +22,11 @@ CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 DEFAULT_MODEL=gemini::gemini-2.5-pro
 ANALYZER_MODEL=gemini::gemini-2.5-pro
 OPTIMIZER_MODEL=openrouter::moonshotai/kimi-k2-thinking
-IMPLEMENTER_MODEL=openrouter::anthropic/claude-sonnet-4.5
+IMPLEMENTER_MODEL=zenmux::anthropic/claude-sonnet-4.5
+INSIGHT_MODEL=gemini::gemini-2.5-flash
+POLISH_MODEL=openrouter::anthropic/claude-sonnet-4.5
 VALIDATOR_MODEL=openrouter::gemini::gemini-2.5-pro
 PROFILE_MODEL=openrouter::anthropic/claude-sonnet-4.5
-POLISH_MODEL=openrouter::anthropic/claude-sonnet-4.5
 
 # Per-agent temperature settings (0.0-2.0 depending on provider)
 ANALYZER_TEMPERATURE=0.6
