feat: switch INSIGHT_MODEL from Gemini Flash to Grok 4 Fast

--- a/backend/.env.cloudrun
+++ b/backend/.env.cloudrun
@@ -37,7 +37,7 @@ IMPLEMENTER_MODEL=openrouter::anthropic/claude-sonnet-4.5
 VALIDATOR_MODEL=gemini::gemini-2.5-pro
 PROFILE_MODEL=openrouter::anthropic/claude-sonnet-4.5
 POLISH_MODEL=openrouter::anthropic/claude-sonnet-4.5
-INSIGHT_MODEL=gemini::gemini-2.5-flash
+INSIGHT_MODEL=openrouter::x-ai/grok-4-fast
 
 # Temperature Settings (0.0-2.0)
 ANALYZER_TEMPERATURE=0.6
