--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,7 +23,7 @@ DEFAULT_MODEL=gemini::gemini-2.5-pro
 ANALYZER_MODEL=gemini::gemini-2.5-pro
 OPTIMIZER_MODEL=openrouter::moonshotai/kimi-k2-thinking
 IMPLEMENTER_MODEL=zenmux::anthropic/claude-sonnet-4.5
-INSIGHT_MODEL=gemini::gemini-2.5-flash
+INSIGHT_MODEL=openrouter::x-ai/grok-4-fast
 POLISH_MODEL=openrouter::anthropic/claude-sonnet-4.5
 VALIDATOR_MODEL=openrouter::gemini::gemini-2.5-pro
 PROFILE_MODEL=openrouter::anthropic/claude-sonnet-4.5
