feat: update optimizer model to GPT-5.1
- Replaced polaris-alpha and kimi-k2-thinking with openai/gpt-5.1 across all environment configurations
- Added model registry entries for GPT-5.1 with file and image support capabilities

--- a/backend/.env.cloudrun
+++ b/backend/.env.cloudrun
@@ -32,7 +32,7 @@ CORS_ORIGINS=*
 # Model Configuration
 DEFAULT_MODEL=gemini::gemini-2.5-pro
 ANALYZER_MODEL=gemini::gemini-2.5-pro
-OPTIMIZER_MODEL=openrouter::openrouter/polaris-alpha
+OPTIMIZER_MODEL=openrouter::openai/gpt-5.1
 IMPLEMENTER_MODEL=openrouter::anthropic/claude-sonnet-4.5
 VALIDATOR_MODEL=gemini::gemini-2.5-pro
 PROFILE_MODEL=openrouter::anthropic/claude-sonnet-4.5
