--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,7 +21,7 @@ CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 # Per-agent model environment variables
 DEFAULT_MODEL=gemini::gemini-2.5-pro
 ANALYZER_MODEL=gemini::gemini-2.5-pro
-OPTIMIZER_MODEL=openrouter::moonshotai/kimi-k2-thinking
+OPTIMIZER_MODEL=openrouter::openai/gpt-5.1
 IMPLEMENTER_MODEL=zenmux::anthropic/claude-sonnet-4.5
 INSIGHT_MODEL=openrouter::x-ai/grok-4-fast
 POLISH_MODEL=openrouter::anthropic/claude-sonnet-4.5
