feat: add DEV_MODE flag to bypass rate limiting for local testing
- Added DEV_MODE environment variable to .env.cloudrun and .env.example (defaults to false)
- Modified rate limiting logic to skip MAX_FREE_RUNS check when DEV_MODE is enabled
- Added warning log when DEV_MODE bypasses rate limits for debugging visibility
- Documented DEV_MODE as development-only flag with production warning in .env.example

--- a/backend/.env.cloudrun
+++ b/backend/.env.cloudrun
@@ -47,6 +47,8 @@ VALIDATOR_TEMPERATURE=0.2
 PROFILE_TEMPERATURE=0.6
 POLISH_TEMPERATURE=0.7
 
+DEV_MODE=false
+
 # ============================================================
 # NOTES
 # ============================================================
