--- a/backend/.env.example
+++ b/backend/.env.example
@@ -35,3 +35,8 @@ IMPLEMENTER_TEMPERATURE=0.6
 VALIDATOR_TEMPERATURE=0.2
 PROFILE_TEMPERATURE=0.6
 POLISH_TEMPERATURE=0.7
+
+# Development-only flags (do NOT enable in production)
+# When set to true, bypasses free-run rate limiting for local testing.
+# Default is false, meaning limits remain enforced.
+DEV_MODE=false
