feat: switch to Gemini/LongCat models for default of demo deployment as both are free, add Vertex AI support, and improve cost tracking
- Changed default model configuration from OpenRouter/Anthropic to Gemini 2.5 Pro and LongCat for cost optimization
- Added Vertex AI client support with Anthropic[vertex] dependency for Claude access via GCP
- Modified agent execution to capture and persist cost metadata (tokens, cost) from LLM responses using StopIteration.value pattern
- Updated DOCX export prompt to remove filesystem operations (os, path

--- a/backend/.env.cloudrun
+++ b/backend/.env.cloudrun
@@ -32,19 +32,20 @@ CORS_ORIGINS=*
 # Model Configuration
 DEFAULT_MODEL=gemini::gemini-2.5-pro
 ANALYZER_MODEL=gemini::gemini-2.5-pro
-OPTIMIZER_MODEL=openrouter::openai/gpt-5.1
-IMPLEMENTER_MODEL=openrouter::anthropic/claude-sonnet-4.5
+OPTIMIZER_MODEL=gemini::gemini-2.5-pro
+IMPLEMENTER_MODEL=gemini::gemini-2.5-pro
 VALIDATOR_MODEL=gemini::gemini-2.5-pro
-PROFILE_MODEL=openrouter::anthropic/claude-sonnet-4.5
-POLISH_MODEL=openrouter::anthropic/claude-sonnet-4.5
-INSIGHT_MODEL=openrouter::x-ai/grok-4-fast
+PROFILE_MODEL=gemini::gemini-2.5-pro
+POLISH_MODEL=gemini::gemini-2.5-pro
+INSIGHT_MODEL=meituan::longcat-flash-chat
+
 
 # Temperature Settings (0.0-2.0)
 ANALYZER_TEMPERATURE=0.6
-OPTIMIZER_TEMPERATURE=1
+OPTIMIZER_TEMPERATURE=0.7
 IMPLEMENTER_TEMPERATURE=0.6
 VALIDATOR_TEMPERATURE=0.2
-PROFILE_TEMPERATURE=0.6
+PROFILE_TEMPERATURE=0.8
 POLISH_TEMPERATURE=0.7
 
 DEV_MODE=false
