Stop tracking internal markdown docs

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ docs/specs/llm-provider-parameters/README.md
 docs/specs/authentication-and-metering/authentication_and_metering_spec.md
 backend/.env.cloudrun
 backend/.env.cloudrun
+AGENTS.md
