chore: add .env.cloudrun to gitignore to prevent accidental commits
- Added .env.cloudrun to root .gitignore to exclude Cloud Run environment configuration from version control
- Prevents sensitive configuration  from being committed to repository

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ docs/specs/authentication-and-metering/authentication_and_metering_spec.md
 backend/.env.cloudrun
 backend/.env.cloudrun
 AGENTS.md
+.env.cloudrun
