--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,17 @@
 # API Keys
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 EXA_API_KEY=your_exa_api_key_here
+OPENAI_API_KEY=your_openai_api_key_here
 
 # Optional: Provider-specific API keys
 LONGCAT_API_KEY=your_longcat_api_key_here
 ZENMUX_API_KEY=your_zenmux_api_key_here
 GEMINI_API_KEY=your_gemini_api_key_here
 CEREBRAS_API_KEY=your_cerebras_api_key_here
+
+# Vertex AI Configuration (for Claude via Vertex)
+VERTEX_PROJECT_ID=your_gcp_project_id_here
+VERTEX_LOCATION=us-central1
 
 # Database
 DATABASE_PATH=./data/applications.db
