--- a/backend/src/api/pricing_config_v2.json
+++ b/backend/src/api/pricing_config_v2.json
@@ -274,6 +274,17 @@
         }
       }
     },
+    "openai": {
+      "markup_type": "direct",
+      "description": "Direct OpenAI API pricing with no markup",
+      "supported_models": [
+        "openai/gpt-4-turbo",
+        "openai/gpt-4o",
+        "openai/gpt-5",
+        "gpt-4o",
+        "gpt-5.1"
+      ]
+    },
     
     "zenmux": {
       "markup_type": "multiplier",
@@ -360,6 +371,7 @@
     "claude-opus": "anthropic/claude-3-opus",
     "claude-haiku": "anthropic/claude-haiku-4.5",
     "gpt5": "openai/gpt-5",
+    "gpt-5.1": "openai/gpt-5",
     "gpt-4o": "openai/gpt-4o",
     "gemini-flash": "gemini-2.5-flash",
     "gemini-pro": "gemini-2.5-pro"
