feat: add Gemini 3 Pro Preview model support with thinking budget capability
- Registered gemini-3-pro-preview in model registry for both Gemini and OpenRouter providers with thinking budget support
- Added pricing configuration: $2.00/M input, $8.00/M output, $8.00/M thinking tokens for Gemini provider
- Added OpenRouter pricing: $2.00/M input, $12.00/M output for google/gemini-3-pro-preview
- Updated pricing_config_v2.json with Gemini 3 Pro Preview metadata and added to provider model lists

--- a/backend/src/api/pricing_config.json
+++ b/backend/src/api/pricing_config.json
@@ -44,6 +44,10 @@
         "x-ai/grok-4-fast": {
           "input": 2.0,
           "output": 10.0
+        },
+        "google/gemini-3-pro-preview": {
+          "input": 2.0,
+          "output": 12.0
         }
       }
     },
@@ -115,6 +119,11 @@
         "gemini-2.0-flash-lite": {
           "input": 0.075,
           "output": 0.30
+        },
+        "gemini-3-pro-preview": {
+          "input": 2.0,
+          "output": 8.0,
+          "thinking": 8.0
         }
       },
       "grounding": {
