--- a/backend/src/api/pricing_config_v2.json
+++ b/backend/src/api/pricing_config_v2.json
@@ -127,6 +127,17 @@
       "context_window": 1000000,
       "supports_thinking": false
     },
+    "gemini-3-pro-preview": {
+      "display_name": "Gemini 3 Pro Preview",
+      "vendor": "google",
+      "base_pricing": {
+        "input": 2.0,
+        "output": 8.0,
+        "thinking": 8.0
+      },
+      "context_window": 1000000,
+      "supports_thinking": true
+    },
     "qwen/qwen3-max": {
       "display_name": "Qwen 3 Max",
       "vendor": "alibaba",
@@ -264,7 +275,8 @@
         "openai/gpt-5",
         "qwen/qwen3-max",
         "meta-llama/llama-3.3-70b-instruct",
-        "x-ai/grok-4-fast"
+        "x-ai/grok-4-fast",
+        "google/gemini-3-pro-preview"
       ],
       "model_overrides": {
         "google/gemini-2.0-flash-exp:free": {
@@ -342,7 +354,8 @@
         "gemini-2.5-pro",
         "gemini-2.5-flash-lite",
         "gemini-2.0-flash",
-        "gemini-2.0-flash-lite"
+        "gemini-2.0-flash-lite",
+        "gemini-3-pro-preview"
       ]
     },
     
